--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=3001
 # MONGO_URL='mongodb://127.0.0.1:27017/Login'
-MONGO_URL = 'mongodb+srv://hetvi2003:mongodbAtlas@login.es30qbr.mongodb.net/'
+MONGO_URL = 'url'
